--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "start": "nodemon -e js,graphql -x node src/index.js",
     "dev": "nodemon -e js,graphql -x node --inspect src/index.js",
     "test": "jest",
-    "deploy": "prisma deploy --env-file variables.env"
+    "deploy": "prisma deploy --env-file variables.env --force"
   },
   "resolutions": {
     "graphql": "^0.13.2"
