--- a/backend/prisma.yml
+++ b/backend/prisma.yml
@@ -1,4 +1,6 @@
-endpoint: https://us1.prisma.sh/andresfelipe9722/tiendapp/dev
+#endpoint: ${env:PRISMA_ENDPOINT}
+#endpoint: https://tiendapp-production-35cd9a2a36.herokuapp.com/tiendapp-prod/prod
+endpoint: https://tiendapp-production-35cd9a2a36.herokuapp.com/tiendapp-prod/prod
 datamodel: datamodel.graphql
 # secret: ${env:PRISMA_SECRET}
 hooks:
